antex-rs/tui/src/bottom_pane/chat_composer/snapshots/antex_tui__bottom_pane__chat_composer__history_search__paste_tests__history_search_large_paste_cursor.snap
---
source: tui/src/bottom_pane/chat_composer/history_search_paste_tests.rs
assertion_line: 76
expression: "format!(\"{}\\nCursor: {cursor:?}\", terminal.backend())"
---
"                                                                                "
" ┃ draft                                                                        "
" ┃                                                                              "
"                                                                                "
"  reverse-i-search: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"

Cursor: Some((79, 4))
